    $ php symfony doctrine:data-load

#### New option: `--migrate`

The following tasks now include a `--migrate` option, which will replace the
nested `doctrine:insert-sql` task with `doctrine:migrate`.

  * `doctrine:build-all`
  * `doctrine:build-all-load`
  * `doctrine:build-all-reload`
  * `doctrine:build-all-reload-test-all`
  * `doctrine:rebuild-db`
  * `doctrine:reload-data`

### Date Setters and Getters

We've added two new methods for retrieving Doctrine date or timestamp values as
PHP DateTime object instances.

    [php]
    echo $article->getDateTimeObject('created_at')
      ->format('m/d/Y');

You can also set a dates value by simply calling the `setDateTimeObject` method
and passing a valid `DateTime` instance.

    [php]
    $article->setDateTimeObject('created_at', new DateTime('09/01/1985'));

### Output DQL Task as Table of Data

When you would previously run the `doctrine:dql` command it will just output the
data as YAML. We have added a new `--table` option. This option allows you to 
output the data as a table, similar to how it ouputs in the MySQL command line.

So now the following is possible.

    $ ./symfony doctrine:dql "FROM Article a" --table
    >> doctrine  executing dql query
    DQL: FROM Article a
    +----+-----------+----------------+---------------------+---------------------+
    | id | author_id | is_on_homepage | created_at          | updated_at          |
    +----+-----------+----------------+---------------------+---------------------+
    | 1  | 1         |                | 2009-07-07 18:02:24 | 2009-07-07 18:02:24 |
    | 2  | 2         |                | 2009-07-07 18:02:24 | 2009-07-07 18:02:24 |
    +----+-----------+----------------+---------------------+---------------------+
    (2 results)

### Debugging queries in functional tests

The `sfTesterDoctrine` class now includes a `->debug()` method. This method
will output information about that queries that have been run in the current
context.

    [php]